Fix z-index issues

--- a/app/src/shared/components/SortableList/SortableItem/sortableItem.pcss
+++ b/app/src/shared/components/SortableList/SortableItem/sortableItem.pcss
@@ -1,4 +1,4 @@
 .root {
   color: var(--greyDark);
-  z-index: 2;
+  position: relative;
 }
