--- a/app/src/shared/components/TextField/textField.pcss
+++ b/app/src/shared/components/TextField/textField.pcss
@@ -113,5 +113,8 @@
   right: 0.5rem;
   top: 50%;
   transform: translate(0, -50%);
+}
+
+.actionContainer.isOpen {
   z-index: 1;
 }
